# app.js
@@ -5,9 +5,27 @@ var cookieParser    = require('cookie-parser')
 var logger          = require('morgan')
 var indexRouter     = require('./routes/index')
 var authRouter      = require('./routes/auth')
+var contactsRouter  = require('./routes/contacts')
 const swaggerUi     = require('swagger-ui-express')
 const swaggerDoc    = require('./swagger.json')
 var app             = express()
+var httpStatusCodes = require('http-status-codes')
+var authController  = require('./controllers/auth')
+var _ = require('lodash/mapKeys')
+
+checkAuth = async (req, res, next) => {
+  if(!req.headers.authtoken){
+    res.status(httpStatusCodes.UNAUTHORIZED).send({"code": httpStatusCodes.UNAUTHORIZED, "message": "Missing authtoken in header"})
+  }else{
+    let userId = await authController.checkToken(req.headers.authtoken)
+    if(userId){
+      req.userId = userId
+      next()
+    }else{
+      res.status(httpStatusCodes.UNAUTHORIZED).send({"code": httpStatusCodes.UNAUTHORIZED, "message": "authtoken has expired"})
+    }
+  }
+}
 
 // view engine setup
 app.set('views', path.join(__dirname, 'views'))
@@ -22,6 +40,7 @@ app.use(express.static(path.join(__dirname, 'public')))
 
 app.use('/', indexRouter)
 app.use('/auth', authRouter)
+app.use('/contacts', [checkAuth, contactsRouter])
 
 var options = {
   explorer: true
@@ -30,12 +49,12 @@ var options = {
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDoc, options));
 
 // catch 404 and forward to error handler
-app.use(function(req, res, next) {
+app.use( (req, res, next) => {
   next(createError(404))
 })
 
 // error handler
-app.use(function(err, req, res, next) {
+app.use((err, req, res, next) => {
   // set locals, only providing error in development
   res.locals.message = err.message
   res.locals.error = req.app.get('env') === 'development' ? err : {}
